  the Imager bounding box interface to a useful state.
  Implemented for all four font drivers.
- Win32 font bounding_box() method now supports the advance width
  and right bearing values.
- Imager::Matrix2d->rotate() would only rotate around the supplied 
  centre point if both 'x' and 'y' were non-zero.
- the internal i_tags_get_string() function now acts correctly for
  integer only tags.
- the FT1.x driver now supports the align parameter correctly.
  Tests were added to each driver to check correct handling of the align
  parameter.
- the Win32 font driver bounding_box() method now puts accuarate values
  in the ascent and descent values, previously they were set to the 
  font ascent/descent rather than the values specific to the string.
- supplying align=>0 to the win32 font driver string() function 
  now aligns in the same way as the other drivers.
- removed the bug reporting email address to prevent spammers stripping
  it.  The URL is still there and if someone knows how rt.cpan.org works
  they can still figure out the email.
- the internal function used to probe file formats if the type
  parameter wasn't passed to the read() method would produce
  diagnostics on stdout, precluding use in web applications.  Silenced
  it.
- the setcolors() had a fencepost error making it impossible to 
  use it to set the last color in the palette.
  http://rt.cpan.org/NoAuth/Bug.html?id=12676
- fix the filter examples in Imager::Filter so they don't indicate that 
  a new image is returned (the filter() method works in-place)
- add examples for the fountain filter
- prevent warnings from Makefile.PL when there's no libraries found
- Imager no longer assumes that MSVC is the only native Win32 
  compiler, MinGW can be used to build Imager.

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
